--- a/index.html
+++ b/index.html
@@ -4,9 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
-    <h1>Olá, mundo</h1>
+    <header>
+        <div id="bola"><img src="./assets/avatar-png-icon-13.jpg" alt="avatar"></div>
+        <div>
+            <ul id="inicio">
+                <li>projetos</li>
+                <li>spotify</li>
+                <li>github</li>
+                <li>sobre mim</li>
+            </ul>
+        </div>
+    </header>
 </body>
 </html>
