--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <div id="bola"><img src="./assets/avatar-png-icon-13.jpg" alt="avatar"></div>
+        <div id="bola"><img src="../assets/avatar-png-icon-13.jpg" alt="avatar"></div>
         <div>
             <ul id="inicio">
                 <li>projetos</li>
