--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <div id="bola"><img src="../assets/avatar-png-icon-13.jpg" alt="avatar"></div>
         <div>
-            <ul id="inicio">
+            <ul>
                 <li>projetos</li>
                 <li>spotify</li>
                 <li>github</li>
@@ -19,5 +19,19 @@
             </ul>
         </div>
     </header>
+
+        <div class="pt1">
+            <div id="bolafoda1"></div>
+            <div id="bolafoda2"></div>
+            <div id="bolafoda3"></div>
+            <div id="linha"></div>
+            <div class="caixadetexto1">
+                <h1><b>/*Gabriel Zonta Batista - 16y - SP -*\</b></h1>
+            </div>
+            <div class="caixadetexto2">
+                <h1>/*Olá me chamo Gabriel <br> <h3>Estou cursando Desenvolvimento de sistemas no senai,  
+                    você pode visualizar alguns de meus projetos em meu github</h3></h1>
+            </div>
+        </div>
 </body>
 </html>
