--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <div class="linha"></div>
         <div id="texto1">Discord: buzz#3324</div>
         
-        <img src="../assets/lua.png" id="lua">
+        <a href=""><img src="../assets/lua.png" id="lua"></a>
         
     </body>
 </html>
