--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
             <div id="bolafoda5"></div>
             <div id="bolafoda6"></div>
             <div id="linha1"></div>
-            <div id="texto">>_</div>
+            <div id="texto">_</div>
         </div>
 
         <div class="linha"></div>
         <div id="texto1">Discord: buzz#3324</div>
         
-        <a href=""><img src="../assets/lua.png" id="lua"></a>
+        <div class="lua"><a href=""><img src="../assets/lua.png" id="lua"></a></div>
         
     </body>
 </html>
