--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <h1><b>/*Gabriel Zonta Batista - 16y - SP -*\</b></h1>
             </div>
             <div class="caixadetexto2">
-                <h1>/*Olá me chamo Gabriel <br> </h1>
+                <div><h1>/*Olá me chamo Gabriel <br> </h1></div>
                 <h3>Estou cursando Desenvolvimento de sistemas no senai,  
                     você pode visualizar alguns de meus projetos em meu github</h3>
             </div>
