--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <li><a href="https://github.com/buzzfps/Projetos">projetos</a></li>
                 <li><a href="https://open.spotify.com/user/p4w8y96hvhjmzg254ev7zqisu">spotify</a></li>
                 <li><a href="https://github.com/buzzfps">github</a></li>
-                <li>sobre mim</li>
+                <li><a href="">sobre mim</li></a>
             </ul>
         </div>
     </header>
