--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="imagem/png" href="/imagens/meufavicon.png" />
+    <link rel="icon" type="imagem/png" href="../assets/icon.jpg"/>
     <title>Document</title>
 </head>
 <body>
     <header>
-        <div id="bola"><img src="../assets/avatar-png-icon-13.jpg" alt="avatar"></div>
+        <div id="bola"><img src="../assets/icon.jpg" alt="avatar" id="avatar"></div>
         <div>
             <ul>
                 <li><a href="https://github.com/buzzfps/Projetos">projetos</a></li>
